--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,17 @@ after_success:
   - docker push jshinney/multi-nginx
   - docker push jshinney/multi-server
   - docker push jshinney/multi-worker
-  # Fixed docker login issue
+  
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-380258614279
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
+    
